2009-02-26  Michael Hutchinson  <mhutchinson@novell.com>

	* JavaBinding.sln: Fix translation projects' GUIDs.

2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>

	* JavaBinding.sln: Set policies. Remove unused name attribute.

2009-02-25  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaLanguageBinding.cs: Track api changes.

2009-02-20  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBinding.csproj: Updated references.

2009-02-11  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaLanguageBinding.cs:
	* IKVMCompilerManager.cs: Track API changes. Use the new
	  ProjectItem collection.

2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * JavaBinding.sln: Flush.

2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * JavaBinding.mds:
 * JavaBinding.sln:
 * JavaBinding.mdp:
 * JavaBinding.csproj: Migrated to MSBuild file format.

2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>

 * configure:
 * AssemblyInfo.cs:
 * JavaBinding.addin.xml: Bump MD version.

2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>

 * JavaBinding.mds:
 * gtk-gui/gui.stetic:
 * gtk-gui/generated.cs:
 * gtk-gui/JavaBinding.GlobalOptionsPanelWidget.cs:
 * gtk-gui/JavaBinding.CodeGenerationPanelWidget.cs: Flush.

2009-01-15  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/ProjectConfigurationPropertyPanel.cs: Remove unused parameter.

	* JavaBinding.mdp: Updated.

2009-01-15  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* JavaLanguageBinding.cs: Fix warning (duplicate using statement).

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBinding.mdp: Don't require a specific version of Mono.Addins.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* AssemblyInfo.cs:
	* JavaBinding.mdp:
	* JavaBinding.make: Add AssemblyInfo.cs files that are autogenerated
	from the addin manifests.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* JavaBinding.addin.xml: Bump MD version.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 
